# llamda

./: .gitignore  .pylintrc  DEBUG  OUT  README.md  llamda-fn.md  llamda_fn._py  pyproject.toml  test_results
docs/: api_reference.md  claude.md  conf.py
examples/: __init__.py  example.ipynb  handle_command_mode.py  play.py
examples/functions/: __init__.py
llamda_fn/: __init__.py  llamda.py
llamda_fn/examples/: __init__.py  example.ipynb  playground.py
llamda_fn/exchanges/: __init__.py  exchange.py  messages.py
llamda_fn/functions/: __init__.py  llamda_callable.py  llamda_classes.py  llamda_function.py  llamda_functions.py  llamda_pydantic.py  process_fields.py
llamda_fn/llms/: __init__.py  api.py  api_types.py  exchange.py  ll_api_config.py  ll_exchange.py  ll_manager.py  ll_message.py  ll_tool.py  llm_manager.py  oai_api_types.py  type_transformers.py
llamda_fn/llogos/: __init__.py  llogos.py
llamda_fn/test/: .pylintrc  llamda_classes_test.py  llamda_field_test.py  llamda_functions_test.py  pyrightconfig.json
llamda_fn/utils/: __init__.py  api.py  llamda_validator.py  logger.py
old/: __init__.py
scripts/: claude.sh
src/: __init__.py  llamda.py
src/llamda/: LlamdaFunction.py  Llamdas.py  __init__.py  function_tools.py  introspection_tools.py  llamda.py  llamda_fn.py  llamda_function.py  llamdafy.py  openai.py  response_types.py
src/llamda_function/: __init__.py  llamda_classes.py  llamda_function.py  process_fields.py
src/notebooks/: example.ipynb
src/test/: function_fixtures.py  llamda_classes_test.py  llamda_field_test.py  llamda_function_test.py  llamda_functions_test.py  test_introspection_tools.py  test_llamda.py  test_llamdafy.py  test_llamdas.py
src/utils/: __init__.py  logger.py
tests/: .pylintrc  conftest.py  llamda_test.py  test_llamda.py  test_llamda_functions.py
tests/function_tests/: llamda_callable_test.py  (+4 more)
(+21 files in other folders)
