[tool.poetry]
name = "llamda-fn"
version = "0.1.0"
description = ""
authors = ["lumpenspace <lumpensapace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8"
openai = "^1.13.3"
rich = "^13.7.1"
prompt-toolkit = "^3.0.47"
pydantic-settings = "^2.3.4"
docstring-parser = "^0.16"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ipykernel = "^6.29.5"
sphinx = "^7.4.7"
myst-parser = "^3.0.1"
sphinx-jsonschema = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
